--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         </div>
 
-        <div class="">
+        <div class="job-container">
 
                 <div class="flex justify-between items-center mb-4">
                     <h2 class="text-lg font-bold">Available Jobs</h2>
